@@ -45,7 +45,9 @@ on GitHub.
 [[release-notes-5.12.1-junit-jupiter-new-features-and-improvements]]
 ==== New Features and Improvements
 
-* ❓
+* New `ExtensionContext.getEnclosingTestClasses()` method to help with migration away from
+  `AnnotationSupport.findAnnotation(Class, Class, SearchOption)` (deprecated since 1.12.0)
+  to `AnnotationSupport.findAnnotation(Class, Class, List)`.
 
 
 [[release-notes-5.12.1-junit-vintage]]
